fix(app-header): fix hero image alignment

--- a/src/components/app-header/app-header.css
+++ b/src/components/app-header/app-header.css
@@ -34,7 +34,7 @@
 .hero-image-wrap {
   display: flex;
   align-items: center;
-  justify-content: right;
+  justify-content: flex-end;
   width: 50%;
 }
 
